--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <doctype html>
-	<html lan="pt-br">
+	<html>
 	<head>
-		<meta charset="UTF-8">
-		<title> Projeto Horta Vida e resistência</title>
+		<meta charset UTF-8>
+		<title> Projeto Horta Vida e resistencia</title>
 
 		<style>
 			header{
@@ -31,13 +31,28 @@
         #nav a:hover {
             background-color: #555;
         }body{
-				background-color:black;
+				background-color: black;
+				background-position: cover;
 				font-family: cursive;
 				font-size:20px;
 				color: green;
 				text-align: center;
-		}h2, h2, h3, h4, h5, h6 {
-            font-size: 25px; /* Define o tamanho de fonte padrão para o <h2> */
+		}h1{ 
+			background-image: url("https://img.freepik.com/fotos-gratis/planos-de-fundo-da-natureza-da-folha-ilustracao-do-padrao-do-design-do-pano-de-fundo-da-planta-abstrato-uma-ilustracao-de-papel-de-parede-da-natureza-verde-vibrante-generativa-ai_188544-12680.jpg?w=2000");
+			color: white;
+
+			}h2, h2, h3, h4 {
+			background-color: black;
+            font-size: 25px;
+            color:white; 
+        }h5{
+        	background-image: url("https://img.freepik.com/fotos-gratis/planos-de-fundo-da-natureza-da-folha-ilustracao-do-padrao-do-design-do-pano-de-fundo-da-planta-abstrato-uma-ilustracao-de-papel-de-parede-da-natureza-verde-vibrante-generativa-ai_188544-12680.jpg?w=2000");
+			font-size: 25px;
+			color: white;
+        }h6{
+        	background-color: black;
+            font-size: 25px;
+            color:white; 
         }
         .destaque {
             font-size: 39px; /* Define o tamanho de fonte maior para o texto destacado */
@@ -47,6 +62,10 @@
 				font-size:16px;
 				color: green;
 				text-align: center;
+
+		}footer{
+			background-image: url("https://img.freepik.com/fotos-gratis/planos-de-fundo-da-natureza-da-folha-ilustracao-do-padrao-do-design-do-pano-de-fundo-da-planta-abstrato-uma-ilustracao-de-papel-de-parede-da-natureza-verde-vibrante-generativa-ai_188544-12680.jpg?w=2000");
+			color: white;
 		}
 </style>
 
@@ -54,7 +73,7 @@
 	<body>
 
 		<header>
-			<h1>Projeto Horta Vida e Resistência</h1>
+			<h1>Projeto Horta Vida e Resistencia</h1>
 			<h2>vida, saúde, sustentabilidade, aprendizado, resiliência e resistência através da arte, horta, cultura e troca de sabedorias.   </h2>
 		</header>
 
@@ -129,7 +148,7 @@ setInterval(carregarImagemAleatoria, 4000);
 
 		<h1 id="inicio">
 			<br><br>
-		Sejam muito bem vindos.Em breve nosso conteudo estara aqui. Fotos, videos, bate papos, agenda de eventos, encontro, informações de plantas por tema e tipo e muito mais.</h1>
+		Sejam muito bem vindos.Em breve nosso conteudo estara aqui. Fotos, videos, bate papos, agenda de eventos, encontro, informações de plantas por tema, tipo e muito mais.</h1>
 		<br><br>
 		
 
@@ -138,7 +157,7 @@ setInterval(carregarImagemAleatoria, 4000);
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSDOF_6CmCl1a3lBYr5OZDoT61MyugAga0tA&usqp=CAU">
 		
 		<br><br>
-		<span class="destaque">Informacões e comentarios sobre plantas</span>
+		<span class="destaque">Informacões e comentarios sobre plantas:</span>
 			<br><br>
 		</h2>
 		<br><br>
@@ -147,7 +166,7 @@ setInterval(carregarImagemAleatoria, 4000);
 		<img src="https://media-manager.noticiasaominuto.com.br/1920/naom_5acb7c680c679.jpg" width="300">
 		<br><br>
 
-	<span class="destaque"> Alecrim: </span>
+	<span class="destaque"> Alecrim:<br> </span>
 			<br>
 		Òtimo aroma, bom pra cabeça.
 		<br><br>
@@ -158,7 +177,7 @@ setInterval(carregarImagemAleatoria, 4000);
 			<br><br>
 		<img src="https://cdn.awsli.com.br/800x800/1539/1539472/produto/108823187/a8bc84fb2f.jpg"width="300">
 		<br><br>
-		<span class="destaque">* Bálsamo: </span>
+		<span class="destaque">* Bálsamo: <br></span>
 		<br><br>
 		ótimo para o estomago!
 		<br><br>
@@ -167,9 +186,9 @@ setInterval(carregarImagemAleatoria, 4000);
 
 	<h5 id="contato">
 		<br><br><br><br><br><br>
-		<span class="destaque">* Contato: </span>
+		<span class="destaque"> Contato:</span><br>
 		Telefone para informações e agendamentos:31 98231-6919. 
-		Richard.
+		Richard.<br><br>
 		whatsapp: 31 98231-6919
 
 		instagram @richardrockwater.
@@ -193,12 +212,14 @@ setInterval(carregarImagemAleatoria, 4000);
 		<br><br>
 
 	</body>
-	<img src="https://avatars.githubusercontent.com/u/136639623?s=400&u=3f611f9906e3a1186f12cb632476a587891aabab&v=4">
+	<img src="https://avatars.githubusercontent.com/u/136639623?s=400&u=3f611f9906e3a1186f12cb632476a587891aabab&v=4">;
+
+
 		
 		
 
 		<footer>
-    <h2>Contato:31-98231-6919<br></h2>
+    <h2>Contato:31-98231-6919<br>Richard Rodrigues</h2>
     
     <p>&copy; 2023 Richard Rodrigues. Todos os direitos reservados.</p>
 </footer>
